--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,14 @@
 {
   "compilerOptions": {
-    "strict": true
+    "target": "esnext",
+    "module": "esnext",
+    "strict": true,
+    "importHelpers": true,
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
+  "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
