--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   ],
   "scripts": {
     "type-check": "tsc --noEmit",
-    "type-check:watch": "yarn type-check -- --watch",
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "webpack -p",
     "build:js:dev": "webpack -d",
     "build": "yarn build:types && yarn build:js",
+    "test": "jest",
     "lint": "eslint --fix --ignore-path .gitignore --ext .js,.ts ."
   },
   "keywords": [
@@ -33,6 +33,7 @@
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/jest": "^24.0.11",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
     "babel-eslint": "^10.0.1",
@@ -40,6 +41,8 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
+    "jest": "^24.7.1",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.4.4",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
