--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "lint": "eslint --fix --ignore-path .gitignore --ext .js,.ts ."
   },
   "keywords": [
-    "instagram",
     "image",
     "filter",
     "css",
-    "canvas"
+    "canvas",
+    "Instagram",
+    "CSSgram"
   ],
   "author": "汪東陽 EastSun5566",
   "license": "MIT",
@@ -38,6 +39,7 @@
     "@typescript-eslint/parser": "^1.6.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "canvas": "^2.4.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
