--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "typescript": "^3.4.4",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.4.4"
   }
 }
