--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
+    "fork-ts-checker-webpack-plugin": "^3.1.1",
     "husky": "^3.1.0",
     "jest": "^24.7.1",
     "ts-jest": "^24.0.2",
