--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,5 @@
     "moduleResolution": "node"
   },
   "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
-  "include": ["src/**/*", "tests/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src"]
 }
