--- a/demo/package.json
+++ b/demo/package.json
@@ -1,65 +1,66 @@
 {
-  "name": "demo",
+  "name": "ccgram-demo",
   "version": "0.1.0",
-  "private": true,
+  "author": "汪東陽 EastSun5566",
+  "license": "MIT",
   "dependencies": {
-    "@babel/core": "7.7.4",
-    "@svgr/webpack": "4.3.3",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
+    "@babel/core": "7.10.5",
+    "@svgr/webpack": "5.4.0",
+    "@testing-library/jest-dom": "^5.11.2",
+    "@testing-library/react": "^10.4.7",
+    "@testing-library/user-event": "^12.0.17",
+    "@types/jest": "^26.0.7",
+    "@types/node": "^14.0.27",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "babel-eslint": "10.0.3",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "8.0.6",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "^26.1.0",
+    "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.5",
     "babel-preset-react-app": "^9.1.0",
-    "camelcase": "^5.3.1",
-    "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "cc-gram": "^0.1.5",
-    "css-loader": "3.2.0",
+    "camelcase": "^6.0.0",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "cc-gram": "^0.2.0",
+    "css-loader": "4.1.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint-config-react-app": "^5.1.0",
-    "eslint-loader": "3.0.2",
-    "eslint-plugin-flowtype": "3.13.0",
-    "file-loader": "4.3.0",
-    "fs-extra": "^8.1.0",
-    "html-webpack-plugin": "4.0.0-beta.5",
+    "eslint-loader": "4.0.2",
+    "eslint-plugin-flowtype": "5.2.0",
+    "file-loader": "6.0.0",
+    "fs-extra": "^9.0.1",
+    "html-webpack-plugin": "4.3.0",
     "identity-obj-proxy": "3.0.0",
-    "jest": "24.9.0",
-    "jest-environment-jsdom-fourteen": "0.1.0",
-    "jest-resolve": "24.9.0",
-    "jest-watch-typeahead": "0.4.2",
-    "mini-css-extract-plugin": "0.8.0",
+    "jest": "26.1.0",
+    "jest-environment-jsdom-fourteen": "1.0.1",
+    "jest-resolve": "26.1.0",
+    "jest-watch-typeahead": "0.6.0",
+    "mini-css-extract-plugin": "0.9.0",
     "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
-    "pnp-webpack-plugin": "1.5.0",
-    "postcss-flexbugs-fixes": "4.1.0",
+    "pnp-webpack-plugin": "1.6.4",
+    "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
-    "postcss-normalize": "8.0.1",
+    "postcss-normalize": "9.0.0",
     "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "4.0.1",
+    "postcss-safe-parser": "4.0.2",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.5",
-    "react-dev-utils": "^10.0.0",
+    "react-dev-utils": "^10.1.0",
     "react-dom": "^16.12.0",
-    "resolve": "1.12.2",
+    "resolve": "1.17.0",
     "resolve-url-loader": "3.1.1",
-    "sass-loader": "8.0.0",
-    "semver": "6.3.0",
-    "style-loader": "1.0.0",
-    "terser-webpack-plugin": "2.2.1",
-    "ts-pnp": "1.1.5",
-    "typescript": "~3.7.2",
-    "url-loader": "2.3.0",
-    "webpack": "4.41.2",
-    "webpack-dev-server": "3.9.0",
+    "sass-loader": "9.0.2",
+    "semver": "7.3.2",
+    "style-loader": "1.2.1",
+    "terser-webpack-plugin": "3.0.8",
+    "ts-pnp": "1.2.0",
+    "typescript": "~3.9.7",
+    "url-loader": "4.1.0",
+    "webpack": "4.44.0",
+    "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "5.1.3"
   },
   "scripts": {
     "dev": "node scripts/start.js",
@@ -137,13 +138,13 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.14.0",
-    "@typescript-eslint/parser": "^2.14.0",
-    "eslint": "^6.8.0",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
+    "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "eslint-plugin-react-hooks": "^4.0.8"
   }
 }
