--- a/demo/package.json
+++ b/demo/package.json
@@ -20,7 +20,7 @@
     "babel-preset-react-app": "^9.1.0",
     "camelcase": "^6.0.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "cc-gram": "^0.2.0",
+    "cc-gram": "^0.2.1",
     "css-loader": "4.1.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -46,7 +46,7 @@
     "postcss-safe-parser": "4.0.2",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.5",
-    "react-dev-utils": "^10.1.0",
+    "react-dev-utils": "10.1.0",
     "react-dom": "^16.12.0",
     "resolve": "1.17.0",
     "resolve-url-loader": "3.1.1",
