--- a/demo/package.json
+++ b/demo/package.json
@@ -3,6 +3,14 @@
   "version": "0.1.0",
   "author": "汪東陽 EastSun5566",
   "license": "MIT",
+  "homepage": "https://eastsun5566.github.io/cc-gram/",
+  "scripts": {
+    "dev": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
   "dependencies": {
     "@babel/core": "7.10.5",
     "@svgr/webpack": "5.4.0",
@@ -61,11 +69,6 @@
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "5.1.3"
-  },
-  "scripts": {
-    "dev": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -145,6 +148,7 @@
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^4.0.8"
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "gh-pages": "^3.1.0"
   }
 }
