--- a/demo/package.json
+++ b/demo/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-transition-group": "^4.4.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "^26.1.0",
     "babel-loader": "8.1.0",
@@ -57,6 +58,7 @@
     "react-app-polyfill": "^1.0.5",
     "react-dev-utils": "10.1.0",
     "react-dom": "^16.12.0",
+    "react-transition-group": "^4.4.1",
     "resolve": "1.17.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "9.0.2",
