--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "build:js": "webpack -p",
     "build:js:dev": "webpack -d",
     "build": "yarn build:types && yarn build:js",
-    "test": "jest __tests__/",
+    "test": "jest __tests__/ --coverage",
     "lint": "eslint --fix --ignore-path .gitignore --ext .js,.ts src/",
     "release:patch": "sh bin/release.sh patch",
     "release:minor": "sh bin/release.sh minor",
     "release:major": "sh bin/release.sh major",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "deploy:demo": "cd demo; npm run deploy; cd -"
   },
   "keywords": [
@@ -55,6 +56,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "canvas": "^2.4.1",
+    "conventional-changelog-cli": "^2.0.34",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
