docs(readme): update license link

--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "url": "https://github.com/EastSun5566/cc-gram"
   },
   "homepage": "https://eastsun5566.github.io/cc-gram/",
+  "bugs": {
+    "url": "https://github.com/EastSun5566/cc-gram/issues"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "yarn lint"
