--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "build": "npm run build:types && npm run build:js",
     "test": "jest __tests__/ --coverage",
     "lint": "eslint --fix --ignore-path .gitignore --ext .js,.ts src/",
-    "release:patch": "sh scripts/release.sh patch",
-    "release:minor": "sh scripts/release.sh minor",
-    "release:major": "sh scripts/release.sh major",
+    "release": "sh scripts/release.sh",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "deploy:demo": "cd demo; npm run deploy; cd -"
   },
@@ -59,7 +57,6 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "canvas": "^2.4.1",
-    "conventional-changelog-cli": "^2.0.34",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
