--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "cc-gram",
   "version": "0.2.1",
   "description": "🖼 A CSS & Canvas Instagram filters based on CSSgram",
-  "main": "dist/index.js",
+  "main": "dist/index.umd.js",
+  "module": "dist/index.esm.js",
   "types": "dist/types/index.d.ts",
   "files": [
     "dist",
@@ -11,8 +12,7 @@
   "scripts": {
     "type-check": "tsc --noEmit",
     "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "webpack -p",
-    "build:js:dev": "webpack -d",
+    "build:js": "rollup -c",
     "build": "npm run build:types && npm run build:js",
     "test": "jest __tests__/ --coverage",
     "lint": "eslint --fix --ignore-path .gitignore --ext .js,.ts src/",
@@ -46,12 +46,13 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-typescript": "^7.3.3",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-node-resolve": "^11.1.0",
     "@types/jest": "^24.0.24",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
@@ -61,15 +62,12 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
-    "fork-ts-checker-webpack-plugin": "^3.1.1",
     "husky": "^3.1.0",
     "jest": "^24.7.1",
+    "rollup": "^2.36.1",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.7.4",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0"
+    "typescript": "^3.7.4"
   },
-  "dependencies": {
-    "@babel/runtime": "^7.4.4"
-  }
+  "dependencies": {}
 }
