--- a/package.json
+++ b/package.json
@@ -4,18 +4,15 @@
   "description": "🖼 A CSS & Canvas Instagram filters based on CSSgram",
   "main": "dist/index.umd.js",
   "module": "dist/index.esm.js",
-  "types": "dist/types/index.d.ts",
+  "types": "dist/index.d.ts",
   "files": [
     "dist",
     "src"
   ],
   "scripts": {
-    "type-check": "tsc --noEmit",
-    "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "rollup -c",
-    "build": "npm run build:types && npm run build:js",
+    "build": "rollup -c",
     "test": "jest __tests__/ --coverage",
-    "lint": "eslint --fix --ignore-path .gitignore --ext .js,.ts src/",
+    "lint": "eslint --fix --ignore-path .gitignore --ext .js,.ts src",
     "release": "sh scripts/release.sh",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "deploy:demo": "cd demo; npm run deploy; cd -"
@@ -46,18 +43,11 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-typescript": "^7.12.7",
-    "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@types/jest": "^24.0.24",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
     "canvas": "^2.4.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -66,8 +56,10 @@
     "jest": "^24.7.1",
     "rollup": "^2.36.1",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.29.0",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.7.4"
+    "tslib": "^2.1.0",
+    "typescript": "^4.1.3"
   },
   "dependencies": {}
 }
