feat: move filter drawing to worker thread

--- a/demo/package.json
+++ b/demo/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "homepage": "https://eastsun5566.github.io/cc-gram/",
   "scripts": {
-    "dev": "node scripts/start.js",
+    "dev": "rm -rf build && node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
