--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "src"
   ],
   "scripts": {
-    "build": "rollup -c",
+    "build": "rm -rf dist && rollup -c",
     "test": "jest __tests__/ --coverage",
     "lint": "eslint --fix --ignore-path .gitignore --ext .js,.ts src",
     "release": "sh scripts/release.sh",
@@ -55,6 +55,7 @@
     "husky": "^3.1.0",
     "jest": "^24.7.1",
     "rollup": "^2.36.1",
+    "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
     "ts-jest": "^24.0.2",
