--- a/demo/package.json
+++ b/demo/package.json
@@ -45,7 +45,6 @@
     "jest-resolve": "26.1.0",
     "jest-watch-typeahead": "0.6.0",
     "mini-css-extract-plugin": "0.9.0",
-    "node-sass": "^7.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
@@ -152,6 +151,7 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^4.0.8",
     "gh-pages": "^3.1.0",
+    "sass": "^1.51.0",
     "source-map-explorer": "^2.4.2"
   }
 }
