--- a/demo/package.json
+++ b/demo/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "postbuild": "react-snap",
     "preview": "serve -s build",
     "test": "node scripts/test.js",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -152,6 +153,7 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^4.0.8",
     "gh-pages": "^3.1.0",
+    "react-snap": "^1.23.0",
     "sass": "^1.51.0",
     "serve": "^14.0.1",
     "source-map-explorer": "^2.4.2"
