--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "build": "rm -rf dist && rollup -c",
     "test": "jest __tests__/ --coverage",
     "lint": "eslint --fix --ignore-path .gitignore --ext .js,.ts src",
-    "release": "sh scripts/release.sh",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "deploy:demo": "cd demo; npm run deploy; cd -"
+    "release": "sh scripts/release.sh"
   },
   "keywords": [
     "image",
