--- a/demo/package.json
+++ b/demo/package.json
@@ -6,8 +6,7 @@
   "homepage": "https://eastsun5566.github.io/cc-gram/",
   "scripts": {
     "dev": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "postbuild": "react-snap",
+    "build": "node scripts/build.js && react-snap",
     "preview": "serve -s build",
     "test": "node scripts/test.js",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
