--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           node-version: 16.x
       - uses: pnpm/action-setup@v2
+        with:
+          version: 7
       - run: |
           pnpm i
           pnpm test
@@ -28,6 +30,8 @@ jobs:
           node-version: 16.x
           registry-url: https://registry.npmjs.org/
       - uses: pnpm/action-setup@v2
+        with:
+          version: 7
       - run: |
           pnpm i
           pnpm build
@@ -44,6 +48,8 @@ jobs:
         with:
           node-version: 16.x
       - uses: pnpm/action-setup@v2
+        with:
+          version: 7
       - run: |
           cd demo
           pnpm i
