--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           node-version: 16.x
       - uses: pnpm/action-setup@v2
+        with:
+          version: 7
       - run: |
           pnpm i
           pnpm test
