--- a/package.json
+++ b/package.json
@@ -42,22 +42,22 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.1.0",
-    "@types/jest": "^24.0.24",
+    "@types/jest": "^29.2.1",
     "@types/offscreencanvas": "^2019.6.4",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "babel-eslint": "^10.0.1",
-    "canvas": "^2.4.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
     "husky": "^3.1.0",
-    "jest": "^24.7.1",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
     "rollup": "^2.36.1",
     "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^29.0.3",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
   }
