--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "rm -rf dist && rollup -c",
     "test": "jest __tests__/ --coverage",
     "lint": "eslint --fix --ignore-path .gitignore --ext .js,.ts src",
+    "type-check": "tsc --noEmit",
     "release": "sh scripts/release.sh"
   },
   "keywords": [
@@ -58,7 +59,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
     "ts-jest": "^29.0.3",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.3"
+    "tslib": "^2.4.1",
+    "typescript": "^4.8.4"
   }
 }
