--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "src"
   ],
   "scripts": {
-    "build": "rm -rf dist && rollup -c",
+    "build": "rimraf dist && rollup -c",
     "test": "jest __tests__/ --coverage",
     "lint": "eslint --fix --ignore-path .gitignore --ext .js,.ts src",
     "type-check": "tsc --noEmit",
@@ -53,6 +53,7 @@
     "husky": "^3.1.0",
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.2.2",
+    "rimraf": "^3.0.2",
     "rollup": "^2.36.1",
     "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-terser": "^7.0.2",
