--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cc-gram",
   "version": "0.2.1",
   "description": "🖼 A CSS & Canvas Instagram filters based on CSSgram",
+  "type": "module",
   "main": "dist/index.umd.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -11,10 +12,11 @@
   ],
   "scripts": {
     "build": "rimraf dist && rollup -c",
+    "type-check": "tsc --noEmit",
     "test": "jest __tests__/ --coverage",
     "lint": "eslint --fix --ignore-path .gitignore --ext .js,.ts src",
-    "type-check": "tsc --noEmit",
-    "release": "sh scripts/release.sh"
+    "release": "sh scripts/release.sh",
+    "demo:dev": "pnpm -C demo dev"
   },
   "keywords": [
     "image",
@@ -42,8 +44,9 @@
     }
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/jest": "^29.2.1",
+    "@types/offscreencanvas": "^2019.7.0",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "babel-eslint": "^10.0.1",
@@ -54,10 +57,10 @@
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.2.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.36.1",
-    "rollup-plugin-filesize": "^9.1.1",
+    "rollup": "^3.2.5",
+    "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.29.0",
+    "rollup-plugin-typescript2": "^0.34.1",
     "ts-jest": "^29.0.3",
     "tslib": "^2.4.1",
     "typescript": "^4.8.4"
