--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
       "DOM",
       "ES2015"
     ] /* Specify library files to be included in the compilation. */,
+    "types": ["offscreencanvas"],
     // "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
     // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
