chore: update package.json meta

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "main": "dist/index.umd.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    "import": "./dist/index.esm.js",
+    "require": "./dist/index.umd.js"
+  },
   "files": [
     "dist",
     "src"
