--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "src"
   ],
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "build": "rimraf dist && rollup -c",
     "type-check": "tsc --noEmit",
     "test": "jest __tests__/ --coverage",
@@ -44,7 +45,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint"
+      "pre-commit": "pnpm lint"
     }
   },
   "devDependencies": {
