--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "preinstall": "npx only-allow pnpm",
     "build": "rimraf dist && rollup -c",
     "type-check": "tsc --noEmit",
-    "test": "jest __tests__/ --coverage",
+    "test": "vitest __tests__",
+    "test:coverage": "vitest run __tests__ --coverage",
     "lint": "eslint --fix --ignore-path .gitignore --ext .js,.ts src",
     "release": "sh scripts/release.sh",
     "demo:dev": "pnpm -C demo dev"
@@ -52,22 +53,21 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.1.0",
     "@rollup/plugin-typescript": "^9.0.2",
-    "@types/jest": "^29.2.1",
     "@types/offscreencanvas": "^2019.7.0",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
+    "@vitest/coverage-c8": "^0.25.6",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
     "husky": "^3.1.0",
-    "jest": "^29.2.2",
-    "jest-environment-jsdom": "^29.2.2",
+    "jsdom": "^20.0.3",
     "rimraf": "^3.0.2",
     "rollup": "^3.2.5",
     "rollup-plugin-filesize": "^9.1.2",
-    "ts-jest": "^29.0.3",
     "tslib": "^2.4.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "vitest": "^0.25.6"
   }
 }
