chore: migrate rollup config from js to ts

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "build": "rimraf dist && rollup -c",
+    "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript",
     "type-check": "tsc --noEmit",
     "test": "vitest __tests__",
     "test:coverage": "vitest run __tests__ --coverage",
