--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cc-gram",
-  "version": "0.2.1",
+  "version": "0.2.2-beta.0",
   "description": "🖼 A CSS & Canvas Instagram filters based on CSSgram",
   "type": "module",
   "main": "dist/index.umd.js",
