--- a/demo/package.json
+++ b/demo/package.json
@@ -57,6 +57,7 @@
     "react-app-polyfill": "^1.0.5",
     "react-dev-utils": "11.0.4",
     "react-dom": "^16.12.0",
+    "react-ga": "^3.3.1",
     "react-transition-group": "^4.4.1",
     "resolve": "1.17.0",
     "resolve-url-loader": "3.1.1",
