--- a/demo/package.json
+++ b/demo/package.json
@@ -30,7 +30,7 @@
     "babel-preset-react-app": "^9.1.0",
     "camelcase": "^6.0.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "cc-gram": "0.2.2-beta.0",
+    "cc-gram": "1.0.1",
     "css-loader": "4.1.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
