feat: init new playground

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/node
 # Edit at https://www.gitignore.io/?templates=node
 
@@ -85,3 +84,5 @@ typings/
 .dynamodb/
 
 # End of https://www.gitignore.io/api/node
+
+build
