chore: update author

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "instagram",
     "cssgram"
   ],
-  "author": "汪東陽 EastSun5566",
+  "author": "Michael Wang 汪東陽 (https://github.com/EastSun5566)",
   "license": "MIT",
   "repository": {
     "type": "git",
