--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "instagram",
     "cssgram"
   ],
-  "author": "Michael Wang 汪東陽 (https://github.com/EastSun5566)",
+  "author": "Michael Wang 汪東陽",
   "license": "MIT",
   "repository": {
     "type": "git",
