--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/node
 # Edit at https://www.gitignore.io/?templates=node
 
@@ -83,5 +82,8 @@ typings/
 
 #DynamoDB Local files
 .dynamodb/
+
+# demo production
+build/
 
 # End of https://www.gitignore.io/api/node
