--- a/demo/public/manifest.json
+++ b/demo/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "CCGram",
+  "name": "CCGram",
   "icons": [
     {
       "src": "favicon.ico",
