--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Publish to JSR
-        run: pnpm dlx jsr publish
+        run: pnpx jsr publish
 
   deploy-demo:
     needs: publish
