--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,25 +1,25 @@
 name: Test
 
 on:
-  push:
-    branches: [main]
   pull_request:
-    branches: [main]
+  push:
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 22.x]
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: actions/checkout@v5
+      - uses: actions/setup-node@v6
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: "lts/*"
       - uses: pnpm/action-setup@v4
-      - run: |
-          pnpm i
+        with:
+          version: 9
+      - name: Install and test
+        run: |
+          pnpm i --frozen-lockfile
           pnpm test
           pnpm build
       - name: Build demo
