chore: simplify lint script

--- a/demo/package.json
+++ b/demo/package.json
@@ -10,8 +10,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint": "eslint src --fix"
   },
   "dependencies": {
     "cc-gram": "file:..",
