--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           pnpm i --frozen-lockfile
           pnpm lint
+          pnpm typecheck
           pnpm test
 
   publish:
