docs: update readme

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "instagram",
     "cssgram"
   ],
-  "author": "Michael Wang 汪東陽 <michael19920327@gmail.com> (https://github.com/EastSun5566)",
+  "author": "Michael Wang <hi@eastsun.me>",
   "license": "MIT",
   "repository": {
     "type": "git",
